--- a/css/main.css
+++ b/css/main.css
@@ -97,29 +97,39 @@ textarea {
    -ms-box-sizing:border-box;
    box-sizing:border-box;
    
-   body{
+body{
         font-size: 10px;
         padding: 0;
         margin: 0;
+
    }
 
-   .wrapper {
+.wrapper {
         display: block;
         padding: 0 1em;
    }
 
-   .box {
+.box {
         width:100%;
         max-width: 960px;
         margin: 0 auto; 
    }
    
-   .feature {
+.topHalf{
+    background: grey;
+    padding-bottom: 3em;
+}
+
+.middle{
+
+}
+
+.feature {
     position: relative;
    }
    
 
-   .feature img{
+.feature img{
     width: 100%;
 
    }
@@ -135,15 +145,70 @@ textarea {
     
 }
 
+/*CONTENT AREA*/
+.middle{
+    background: #f5f5f5;
+}
+.main {
+    position: relative;
+    padding-top: 1.6em;
+}
 
 
+.main h3{
+    position: absolute;
+    top:-30px;
+    margin: 0;
+    font-size: 2.2em;
+    background: #fff;
+    padding-bottom: 0.5em;
+    line-height: 1;
+}
+
+.main p{
+    margin: 0;
+    font-size: 1.4em;
+    line-height: 1.3;
+}
+
+/* SIDEBAR */
+
+.sidebar h4{
+    color: white;
+    background: orange;
+    padding: 0.5em;
+    margin: 1em 0 0;
+    font-size: 1.8em;
+    font-weight: 300;
+    line-height: 1;
+
+}
 
 
+.sidebar ol{
+    margin: 0;
+    padding:1em 2em;
+    border: 1px solid orange;
+    border-top: 0;
 
+}
 
+.sidebar ol li{
+    list-style: disc;
+    list-style-position: inside;
+    font-size: 1.4em;
+    line-height: 1.2em;
+    margin: 0.5em 0;
 
+}
 
-
+.sidebar ol li span{
+    display: block;
+    font-size: 0.8em;
+    color: #444;
+    font-weight: 400;
+    padding-left: 1;
+}
 
 /* ==========================================================================
    Helper classes
